<resources>
    <string name="app_name" translatable="false">MentalCompute</string>

    <!-- Main Activity -->
    <string name="play">Play</string>
    <!-- <string name="score_view">View scores</string> -->

    <!-- Mental Activity -->
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="skip">Operation skipped</string>
    <string name="answer">Answer : %1$d</string>
    <string name="validate">Validate</string>
    <string name="operation_template" translatable="false">%1$d %2$s %3$d</string>

    <!-- Score Activity-->
    <string name="operations_count_label">Operations count : XX</string>
    <string name="accuracy_label">Accuracy : XX %</string>
    <string name="last_operation_label">Last operation : %1$d %2$operator %3$d = %4$d</string>
    <string name="retry">Retry</string> <!-- Keep the key for later -->
    <string name="previous">Previous</string>

    <!-- Score view menu -->
    <string name="score_view">View scores</string>
    <string name="reset">Reset scores</string>
</resources>