<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"/>

        <EditText
            android:id="@+id/AnswerZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/CorrectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:textColor="@color/valid_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/IncorrectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect"
            android:textColor="@color/invalid_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/AnswerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/house_icon_52x50"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"/>

            <Button
                android:id="@+id/ValidButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:minWidth="150dp"
                android:text="@string/validate" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>